<resources>
    <string name="app_name">Examen Android 2022</string>
    <string name="bottom_navigation_menu_landscape">Landscape</string>
    <string name="bottom_navigation_menu_logos">Logo</string>
    <string name="bottom_navigation_menu_android">Android</string>


    <!-- Textes fragments accueil -->
    <string name="txtBottomBarHome">Home</string>
    <string name="txtBottomBarRecherche">Recherche</string>
    <string name="txtBottomBarBudget">Budget</string>
    <string name="txtBottomBarAgenda">Agenda</string>

    <!-- Textes fragments accueil -->
    <string name="txtHomeAccueil">Accueil</string>
    <string name="txtHomeButAppli">Site de réservation de logements</string>
    <!-- Textes fragments détails logement -->
    <string name="txtDetailLogVille">Ville :</string>
    <string name="txtDetailLogTitre">titre :</string>
    <string name="txtDetailLogPrix">Prix :</string>
    <string name="txtDetailLogLat">Lat :</string>
    <string name="txtDetailLogLng">Lng :</string>
    <!-- Textes fragments liste logements -->
    <string name="ne_sert_pas">Ne sert pas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>